--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,15 +33,15 @@ layout: default
           <div>
             <div style="float: left">
             {% if count > prev %}
-              이전 : <a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
-                <i class="fa fa-arrow-circle-left fa-5x" aria-hidden="true" style="color: black"></i> </a>
+                <a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
+                <i class="fa fa-arrow-circle-left fa-3x" aria-hidden="true" style="color: black"></i> </a>
             {% endif %}
             </div>
             
             <div style="float: right">
             {% if next > -1 %}
-              다음 : <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
-                <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i> </a>
+                <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                <i class="fa fa-arrow-circle-right fa-3x" aria-hidden="true" style="color: black"></i> </a>
             {% endif %}
             </div>
           </div>
