--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
             
             <div style="float: right">
             {% if next > -1 %}
-                <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                다음<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
                 <i class="fa fa-arrow-circle-right fa-3x" aria-hidden="true" style="color: black"></i> </a>&nbsp;&nbsp;&nbsp;&nbsp;
             {% endif %}
             </div>
