--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
             <div style="float: left">
             {% if count > prev %}
                 &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
-                <i class="fa fa-arrow-circle-left fa-3x" aria-hidden="true" style="color: black"></i> </a>
+                <i class="fa fa-arrow-circle-left fa-2x" aria-hidden="true" style="color: black"></i> </a>이전
             {% endif %}
             </div>
             
