--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,15 +33,15 @@ layout: default
           <div>
             <div style="float: left">
             {% if count > prev %}
-                &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
-                <i class="fa fa-arrow-circle-left fa-2x" aria-hidden="true" style="color: black"></i> </a>이전
+                &nbsp;&nbsp;&nbsp;&nbsp;<span><a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
+                <i class="fa fa-arrow-left fa-1x" aria-hidden="true" style="color: black"></i> </a>이전 글</span>
             {% endif %}
             </div>
             
             <div style="float: right">
             {% if next > -1 %}
-                다음<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
-                <i class="fa fa-arrow-circle-right fa-1x" aria-hidden="true" style="color: black"></i> </a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <span>다음 글<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i> </a></span>&nbsp;&nbsp;&nbsp;&nbsp;
             {% endif %}
             </div>
           </div>
