--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,14 +33,19 @@ layout: default
           <div>
             <div style="float: left">
             {% if count > prev %}
-                &nbsp;<span style="display: inline-block; border: 2px solid black"><a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
-                <i class="fa fa-arrow-left fa-1x" aria-hidden="true" style="color: black"></i> </a>이전 글</span>
+                &nbsp;<a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
+                  <span style="display: inline-block; border: 1px solid black; padding: 20px">
+                    <i class="fa fa-arrow-left fa-1x" aria-hidden="true" style="color: black"></i> 
+                    이전 글
+                  </span>
+                </a>
             {% endif %}
             </div>
             
             <div style="float: right">
             {% if next > -1 %}
-                <span style="display: inline-block; border: 2px solid black">다음 글<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                다음 글<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                  <span style="display: inline-block; border: 1px solid black; padding: 20px"></span>
                 <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i> </a></span>&nbsp;
             {% endif %}
             </div>
