--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,9 @@ layout: default
           <div>
             <div style="float: left">
             {% if count > prev %}
-                &nbsp;<a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
-                  <span style="display: inline-block; border: 1px solid black; padding: 20px">
-                    <i class="fa fa-arrow-left fa-1x" aria-hidden="true" style="color: black"></i> 
+                <a href="{{ site.baseurl }}{{ tag[1][prev].url }}" style="text-align: left">
+                  <span style="display: inline-block; border: 1px solid black; padding: 10px">
+                    &nbsp;<i class="fa fa-arrow-left fa-1x" aria-hidden="true" style="color: black"></i> 
                     이전 글
                   </span>
                 </a>
@@ -44,9 +44,12 @@ layout: default
             
             <div style="float: right">
             {% if next > -1 %}
-                다음 글<a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
-                  <span style="display: inline-block; border: 1px solid black; padding: 20px"></span>
-                <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i> </a></span>&nbsp;
+                <a href="{{ site.baseurl }}{{ tag[1][next].url }}" style="text-align: right">
+                  <span style="display: inline-block; border: 1px solid black; padding: 10px"></span>
+                <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>&nbsp;
+                다음 글 
+              </span>
+            </a>
             {% endif %}
             </div>
           </div>
