--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,11 @@
       <div class="container content">
         {{ content }}
       </div>
-      <a href="#head" class="top">
-        <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i>
-      </a>
+      <div style="position: fixed; bottom:10px; right: 5px">
+        <a href="#head" class="top">
+          <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i>
+        </a>
+      </div>
       <footer>
           <div id="footer" class="mastfooter">
               <div class="container_body">
