--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,7 @@
       <div class="container content">
         {{ content }}
       </div>
-      <div style="position: fixed; bottom:10px; right: 5px">
-        <a href="#head" class="top">
-          <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i>
-        </a>
-      </div>
+
       <footer>
           <div id="footer" class="mastfooter">
               <div class="container_body">
@@ -75,7 +71,11 @@
           </div>
         </footer>
         <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-
+        <div style="position: fixed; bottom:10px; right: 5px">
+          <a href="#head" class="top">
+            <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black">위로가기</i>
+          </a>
+        </div>
     </div>
    
 
