--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
           </div>
         </footer>
         <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-        <div style="position: fixed; bottom:10px; right: 5px">
+        <div id="toplink" class="toplink">
           <a href="#head" class="top">
             <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black">위로가기</i>
           </a>
