--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -313,6 +313,12 @@ th {
   margin-left:  auto;
   margin-right: auto;
 }
+
+.toplink {
+  position: fixed;
+  bottom: 10px;
+  right: 5px;
+}
 /*
  * Masthead
  *
