--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         {{ content }}
         
           <a href="#head" class="top">
-            <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black">위로가기</i>
+            <i class="fa fa-arrow-circle-right fa-5x" aria-hidden="true" style="color: black"></i>
           </a>
       
       </div>
