--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
       <div class="container content">
         {{ content }}
         
-          <a href="#head" class="top">
+          <a href="{{ site.baseurl }}/" class="top">
             올라가기
           </a>
       
