--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
          <div class="wrap">
            <div class="masthead">
              <div class="container">
-               <h3 class="masthead-title">
+               <h3 class="masthead-title" style="color: black">
      
                  <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
                    <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
