--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,10 +47,13 @@
       <div class="container content">
         {{ content }}
         
-          <a href="{{ site.baseurl }}/" class="top">
-            올라가기
-          </a>
+    
       
+      </div>
+      <div>
+        <a href="{{ site.baseurl }}/" class="top">
+          올라가기
+        </a>
       </div>
 
       <footer>
