--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
       position: fixed;
       right: 10px;
       bottom: 10px;
+      width: 100%;
       display: none;
     }
   </style>
@@ -46,9 +47,6 @@
 
       <div class="container content">
         {{ content }}
-        
-    
-      
       </div>
       <div>
         <a id="top" href="{{ site.baseurl }}/" class="top">
