--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% seo %}
 
   <style>
-    a.top {
+    .top {
       position: fixed;
       right: 10px;
       bottom: 10px;
@@ -48,7 +48,7 @@
       <div class="container content">
         {{ content }}
       </div>
-      <div>
+      <div class="top">
         <a id="top" href="{{ site.baseurl }}/" class="top">
           올라가기
         </a>
