--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
       position: fixed;
       right: 20px;
       bottom: 20px;
-      width: 100%;
-      display: none;
+      display: inline-block;
     }
   </style>
   <script>
