--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,15 +43,13 @@
                </h3>
              </div>
            </div>
-
       <div class="container content">
         {{ content }}
       </div>
       <div class="top">
-        <a id="top" href="{{ site.baseurl }}/" class="top">
+        <a href="{{ site.baseurl }}/" >
           올라가기
         </a>
-        <p>dd</p>
       </div>
 
       <footer>
