--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,11 +46,11 @@
       <div class="container content">
         {{ content }}
       </div>
-      <div class="top">
-        <a href="{{ site.baseurl }}/" >
+      
+        <a class="top" href="{{ site.baseurl }}/" >
           올라가기
         </a>
-      </div>
+   
 
       <footer>
           <div id="footer" class="mastfooter">
