--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       position: fixed;
       right: 20px;
       bottom: 20px;
-      display: inline-block;
+      display: none;
     }
   </style>
   <script>
