--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       </div>
       
         <a class="top" href="{{ site.baseurl }}/" >
-          &uarr;
+          <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
         </a>
    
 
