--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     $(document).ready(function() {
       $(window).scroll(function() {
         if($(this).scrollTop() > 500) {
-          $('.top').fadeIn();
+          $('.top').css('display','block')
         }
         else {
           $('.top').fadeOut();
