--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -314,10 +314,11 @@ th {
   margin-right: auto;
 }
 
-.toplink {
+.top {
   position: fixed;
-  bottom: 10px;
-  right: 5px;
+  right: 20px;
+  bottom: 20px;
+  display: none;
 }
 /*
  * Masthead
