--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <script>
 
       $(window).scroll(function() {
-        if($(this).scrollTop() > 500) {
+        if($(document).scrollTop() > 500) {
           $('.top').css('display','block')
         }
         else {
