--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 
           $(window).scroll(function() {
             if($(document).scrollTop() > 500) {
-              $('.top').css('display','block')
+              $('.top').fadeIn();
             }
             else {
               $('.top').fadeOut();
