--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <script>
 
           $( window ).scroll(function() {
-            if( $( document ).scrollTop() > 500) {
+            if( $( this ).scrollTop() > 500) {
               $( '.top' ).fadeIn();
             }
             else {
