--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       position: fixed;
       right: 20px;
       bottom: 20px;
-      display: none;
+   
     }
   </style>
   
@@ -40,8 +40,8 @@
           <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
         </a>
         <script>
-
-          $( window ).scroll(function() {
+        $( document ).ready( function() {
+          $( window ).scroll( function() {
             if( $( this ).scrollTop() > 500) {
               $( '.top' ).fadeIn();
             }
@@ -49,7 +49,7 @@
               $( '.top' ).fadeOut();
             }
           });
-       
+        });
       </script>
 
       <footer>
