--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@
         $( document ).ready( function() {
           $( window ).scroll( function() {
             if( $( this ).scrollTop() > 200) {
-              $( '.top' ).fadeIn();
+              $( ".top" ).fadeIn();
             }
             else {
-              $( '.top' ).fadeOut();
+              $( ".top" ).fadeOut();
             }
           });
             return false;
