--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,14 +41,15 @@
           <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
         </a>
       </div>
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script>
         $( document ).ready( function() {
           $( window ).scroll( function() {
             if( $( this ).scrollTop() > 200) {
-              $( ".top" ).fadeIn();
+              $( '.top' ).fadeIn();
             }
             else {
-              $( ".top" ).fadeOut();
+              $( '.top' ).fadeOut();
             }
           });
             return false;
