--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         {{ content }}
       </div>
       <div>
-        <a class="topbutton" href="{{ site.baseurl }}/" >
+        <a id="top" class="topbutton" href="{{ site.baseurl }}/" >
           <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
         </a>
       </div>
