--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% seo %}
 
   <style>
-    a.topbutton {
+    #top {
       position: fixed;
       right: 20px;
       bottom: 20px;
@@ -41,19 +41,22 @@
         <a id="top" class="topbutton" href="{{ site.baseurl }}/" >
           <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
         </a>
+        <a class="topbutton" href="{{ site.baseurl }}/" >
+          <i class="fa fa-arrow-right fa-1x" aria-hidden="true" style="color: black"></i>
+        </a>
       </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script>
         $( document ).ready( function() {
           $( window ).scroll( function() {
             if( $( this ).scrollTop() > 200) {
-              $( '.topbutton' ).fadeIn();
+              $( '#top' ).fadeIn();
             }
             else {
-              $( '.topbutton' ).fadeOut();
+              $( '#top' ).fadeOut();
             }
           });
-          $( '.topbutton').click( function() {
+          $( '#top').click( function() {
             $( 'html, body' ).animate( {scrollTop:0}, 400 );
             return false;
           })
