--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -5,6 +5,7 @@ $red:      #ac4142;
 $orange:   #d28445;
 $yellow:   #f4bf75;
 $green:    #90a959;
+$truegreen: #0de70d;
 $cyan:     #75b5aa;
 $blue:     #6a9fb5;
 $magenta:  #aa759f;
@@ -15,7 +16,7 @@ $white:      #fff;
 $lightgrey:  #eee;
 $black:      #000;
 
-$theme-color: $blue;
+$theme-color: $truegreen;
 $theme-color-dark: darken($theme-color, 10%);
 
 $post-date-color: #9a9a9a;
