--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -5,7 +5,7 @@ $red:      #ac4142;
 $orange:   #d28445;
 $yellow:   #f4bf75;
 $green:    #90a959;
-$truegreen: #0de70d;
+$truegreen: #16c45f;
 $cyan:     #75b5aa;
 $blue:     #6a9fb5;
 $magenta:  #aa759f;
