--- a/_scss/component/_masthead.scss
+++ b/_scss/component/_masthead.scss
@@ -17,9 +17,9 @@
   .masthead-title {
     margin-top: 0;
     margin-bottom: 0;
-    color: $theme-color;
+    color: black;
     a {
-      color: $theme-color;
+      color: black;
       text-decoration: none;
     }
     small {
