--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -112,7 +112,7 @@ layout: default
                 {% if current == 0 %}
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -162,7 +162,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -212,7 +212,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -280,7 +280,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -318,7 +318,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -356,7 +356,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
@@ -394,7 +394,7 @@ layout: default
                 </tr>
                 <tr>
                   <th class="more-posts-title">
-                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;{{ tag[1][current].title }} </a>
+                    <a class="more-posts-title" href="{{site.url}}{{tag[1][current].url}}"> &nbsp;<U>{{ tag[1][current].title }}</U> </a>
                   </th>
                   <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
                 </tr>
