--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -79,7 +79,7 @@
     display: none;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: 576px) {
     .nav__icon-menu {
       display: inline-block;
     }
