--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
                
                 <i class="nav__icon nav__icon-menu ion ion-md-menu"></i>
                 <i class="nav__icon nav__icon-search ion ion-md-search"></i>
-              
+              <div class="header__overlay"></div>
              </div>
            </div>
            {% include search.html %}
