--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
                  <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
                   {{ site.tagline }} 
                  </a>
+                 <div class="nav-buttons">
                  <i class="nav__icon nav__icon-search ion ion-md-search"></i>
+                 </div>
                  <div class="header__overlay"></div>
                </h3>
                
