--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -15,5 +15,5 @@
 <script src="{{ site.baseurl }}/js/vendors/transition.js"></script>
 <script src="{{ site.baseurl }}/js/vendors/zoom.min.js"></script>
 <script src="{{ site.baseurl }}/js/vendors/wow.min.js"></script>
-<script src="{{ site.baseurl }}/js/common.js"></script>
+<script src="/js/common.js"></script>
 <!-- end javascript files -->
