--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,6 +1,6 @@
 <!-- begin javascript files -->
-<script src="{{ site.baseurl }}/js/vendors/jquery-3.3.1.min.js"></script>
-<script src="{{ site.baseurl }}/js/vendors/simple-jekyll-search.min.js"></script>
+<script src="/js/vendors/jquery-3.3.1.min.js"></script>
+<script src="/js/vendors/simple-jekyll-search.min.js"></script>
 <script>
     SimpleJekyllSearch({
     searchInput: document.getElementById("js-search-input"),
