--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -21,6 +21,31 @@
 
 .container {
 
+  .header__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    background-color: rgba(17,17,17,0.7);
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease;
+  }
+
+  @media only screen and (max-width: $mobile) {
+    margin-top: 50px;
+
+    .header__overlay {
+      &.is-visible {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+
   max-width: 28rem;
   a {
     @if $theme-color != $default { color: $theme-color; }
