--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -35,7 +35,7 @@
     transition: all 0.5s ease;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: 576px) {
     margin-top: 50px;
 
     .header__overlay {
