--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,12 @@
               </h3>
                
               <div class="nav-buttons">
-                <i class="nav__icon nav__icon-search ion ion-md-search"></i>
+                <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search"></i></a>
               </div>
-              <div class="header__overlay"></div>
+             
              </div>
              
-             {% include search.html %}
+             
            </div>
       <div class="container content">
         {{ content }}
