--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -21,9 +21,9 @@
 
  
 .containers {
-  max-width: $container-base-width;
-  padding-left: $container-offset;
-  padding-right: $container-offset;
+  max-width: 790px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 
