--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -15,6 +15,7 @@ $default:  #505050;
 $white:      #fff;
 $lightgrey:  #eee;
 $black:      #000;
+$dark: #212121;
 
 $theme-color: $truegreen;
 $theme-color-dark: darken($theme-color, 10%);
