--- a/_scss/base/_search.scss
+++ b/_scss/base/_search.scss
@@ -16,7 +16,7 @@
   margin: 0 auto;
   padding-top: 250px;
 
-  @media only screen and (max-width: $tablet) {
+  @media only screen and (max-width: 768px) {
     width: 80%;
     padding-top: 100px;
   }
