--- a/_scss/base/_search.scss
+++ b/_scss/base/_search.scss
@@ -41,8 +41,8 @@
     font-size: 28px;
     line-height: 32px;
     border: none;
-    border-bottom: 3px solid $dark;
-    color: $dark;
+    border-bottom: 3px solid #000;
+    color: #000;
     &::placeholder {
       font-weight: 700;
       color: #bbb;
