--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,9 @@
                   {{ site.tagline }} 
                  </a>
           
+                 <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search"></i></a>
               </h3>
-               
-              
-                <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search"></i></a>
-              
-             
+
              </div>
              
              
@@ -32,7 +29,7 @@
       <div class="container content">
         {{ content }}
       </div>
-      
+      <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
       <footer>
           <div id="footer" class="mastfooter">
               <div class="container_body">
