--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -398,7 +398,7 @@ th {
   height: 40px;
   line-height: 40px;
   text-align: center;
-	background-color: $light-gray;
+	background-color:  #9a9a9a;
 	color: $dark;
 	cursor: pointer;
 	transition: all .25s ease;
