--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -413,7 +413,7 @@ th {
   }
 }
 
-@media only screen and (max-width: $tablet) {
+@media only screen and (max-width: 600px) {
   .top {
     bottom: 25px;
     
