--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   <style>
   .top {
   position: fixed;
-  bottom: 40px;
-  right: -100px;
+  bottom: 10px;
+  right: 10px;
 	z-index: 1;
 	width: 40px;
   height: 40px;
@@ -70,7 +70,7 @@
       </div>
       <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
       <footer>
-          <div id="footer" class="mastfooter">
+          <div id="footer" class="mastfooter">`
               <div class="container_body">
                 <a href="https://github.com/sanggil1107">
                     <i class="fa fa-github fa-2x" aria-hidden="true" style="color:black"></i>
