--- a/_scss/base/_search.scss
+++ b/_scss/base/_search.scss
@@ -50,6 +50,9 @@
     &::-ms-clear {
       display: none;
     }
+    @media only screen and (min-width: 38em) {
+      width: 80%;
+      padding-top: 100px;
   }
 }
 
