--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
                   {{ site.tagline }} 
                  </a>
           
-                 <a href="/blog/search" style="text-align: right;"><i class="nav__icon nav__icon-search ion ion-md-search"></i></a>
+                 <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
               </h3>
 
              </div>
