--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
                  <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
                   {{ site.tagline }} 
                  </a>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                  <div style="float: right">
                  <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
                  </div>
