--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,14 +40,17 @@
            <div class="masthead">
              <div class="container">
               <h3 class="masthead-title" style="color: black">
-     
+                <div>
+                  <div style="float: center;">
                  <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
                   {{ site.tagline }} 
                  </a>
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </div>
+                 
                  <div style="float: right">
                  <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
                  </div>
+                </div>
                 </h3>
 
              </div>
