--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,9 @@
                 </div>
                 </h3>
 
+                <div style="float: right">
+                    <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
+                    </div>
              </div>
              
              
