--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,23 +39,20 @@
          <div class="wrap">
            <div class="masthead">
              <div class="container">
+               <div>
               <h3 class="masthead-title" style="color: black">
-                <div>
-                  <div style="float: center;">
+                  <div style="float: center">
                  <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
                   {{ site.tagline }} 
                  </a>
                 </div>
                  
                  <div style="float: right">
-                 <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
+                 <a href="/blog/search" style="text-align: right"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
                  </div>
-                </div>
                 </h3>
+              </div>
 
-                <div style="float: right">
-                    <a href="/blog/search"><i class="nav__icon nav__icon-search ion ion-md-search" style="text-align: right;"></i></a>
-                    </div>
              </div>
              
              
